@@ -1,10 +1,10 @@
 package com.telemessage.simulators.smpp_cloudhopper;
 
-import com.telemessage.simulators.Simulator;
 import com.telemessage.simulators.common.conf.EnvConfiguration;
 import com.telemessage.simulators.common.services.filemanager.SimFileManager;
 import com.telemessage.simulators.controllers.message.MessagesCache;
 import com.telemessage.simulators.smpp.SMPPRequest;
+import com.telemessage.simulators.smpp.SMPPSimulatorInterface;
 import com.telemessage.simulators.smpp.conf.SMPPConnectionConf;
 import com.telemessage.simulators.smpp.conf.SMPPConnections;
 import com.telemessage.simulators.smpp_cloudhopper.config.CloudhopperProperties;
@@ -17,8 +17,6 @@ import jakarta.annotation.PreDestroy;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.simpleframework.xml.core.Persister;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
 
 import java.io.InputStream;
 import java.util.List;
@@ -29,9 +27,9 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
 /**
- * Main orchestrator for Cloudhopper SMPP connections.
+ * Main orchestrator for Cloudhopper SMPP smppConnections.
  *
- * <p>This service manages all SMPP connections using the modern Cloudhopper library.
+ * <p>This service manages all SMPP smppConnections using the modern Cloudhopper library.
  * It provides the same interface as the legacy SMPPSimulator for seamless switching.</p>
  *
  * <p><b>Key Features:</b></p>
@@ -62,8 +60,7 @@ import java.util.concurrent.TimeUnit;
  * @see CloudhopperSMSCManager
  */
 @Slf4j
-@Service("cloudHopperSimulator")
-public class CloudhopperSimulator implements Simulator {
+public class CloudhopperSimulator implements SMPPSimulatorInterface {
 
     public static final String CONN_FILE = "smpps.xml";
 
@@ -80,7 +77,7 @@ public class CloudhopperSimulator implements Simulator {
     private final SessionStateManager sessionStateManager;
 
     @Getter
-    private SMPPConnections connections;
+    private SMPPConnections smppConnections;
 
     private final Map<Integer, CloudhopperConnectionManager> connectionManagers = new ConcurrentHashMap<>();
     private final ExecutorService executorService;
@@ -98,7 +95,6 @@ public class CloudhopperSimulator implements Simulator {
      * @param envConfig Environment configuration
      * @param messagesCache Shared message cache service
      */
-    @Autowired
     public CloudhopperSimulator(
             CloudhopperProperties properties,
             EnvConfiguration envConfig,
@@ -114,13 +110,23 @@ public class CloudhopperSimulator implements Simulator {
             threadPoolSize,
             runnable -> {
                 Thread thread = new Thread(runnable);
-                thread.setName("cloudhopper-sim-" + thread.getId());
+                thread.setName("cloudhopper-sim-" + thread.threadId());
                 thread.setDaemon(false);
                 return thread;
             }
         );
 
         log.info("CloudhopperSimulator initialized with {} executor threads", threadPoolSize);
+    }
+
+    /**
+     * Backward compatibility method for legacy controllers.
+     * Returns the SMPP connections configuration.
+     *
+     * @return SMPPConnections configuration object
+     */
+    public SMPPConnections getConns() {
+        return smppConnections;
     }
 
     /**
@@ -133,7 +139,7 @@ public class CloudhopperSimulator implements Simulator {
             log.info("Initializing Cloudhopper SMPP Simulator...");
             readFromConfiguration();
             log.info("Cloudhopper SMPP Simulator configuration loaded successfully");
-            log.info("Total connections configured: {}", connectionManagers.size());
+            log.info("Total smppConnections configured: {}", connectionManagers.size());
         } catch (Exception e) {
             log.error("Failed to initialize Cloudhopper SMPP Simulator", e);
             state = State.INVALID;
@@ -149,26 +155,26 @@ public class CloudhopperSimulator implements Simulator {
      */
     private void readFromConfiguration() throws Exception {
         String currentEnv = envConfig.getEnvCurrent();
-        String configPath = String.format("com/telemessage/simulators/%s/%s", currentEnv, CONN_FILE);
+        String configPath = String.format("%s/%s", currentEnv, CONN_FILE);
 
         log.info("Loading Cloudhopper configuration from: {}", configPath);
 
-        try (InputStream inputStream = SimFileManager.getResourceAsStream(configPath)) {
+        try (InputStream inputStream = SimFileManager.getResolvedResourcePath(configPath)) {
             if (inputStream == null) {
                 throw new IllegalStateException("Configuration file not found: " + configPath);
             }
 
             Persister persister = new Persister();
-            connections = persister.read(SMPPConnections.class, inputStream);
+            smppConnections = persister.read(SMPPConnections.class, inputStream);
 
-            if (connections == null || connections.getConnections() == null) {
-                throw new IllegalStateException("No connections found in configuration");
+            if (smppConnections == null || smppConnections.getConnections() == null) {
+                throw new IllegalStateException("No smppConnections found in configuration");
             }
 
-            log.info("Loaded {} connection configurations", connections.getConnections().size());
+            log.info("Loaded {} connection configurations", smppConnections.getConnections().size());
 
             // Create connection managers for each configured connection
-            for (SMPPConnectionConf connConf : connections.getConnections()) {
+            for (SMPPConnectionConf connConf : smppConnections.getConnections()) {
                 createConnectionManagers(connConf);
             }
 
@@ -218,10 +224,20 @@ public class CloudhopperSimulator implements Simulator {
     }
 
     /**
-     * Starts all configured SMPP connections.
+     * Starts the simulator (Simulator interface implementation).
+     * This is called automatically by Spring after initialization.
+     */
+    @Override
+    public void start() {
+        log.info("Starting CloudhopperSimulator...");
+        startConnections();
+    }
+
+    /**
+     * Starts all configured SMPP smppConnections.
      */
     public void startConnections() {
-        log.info("Starting all Cloudhopper SMPP connections...");
+        log.info("Starting all Cloudhopper SMPP smppConnections...");
         state = State.STARTED;
 
         int successCount = 0;
@@ -243,7 +259,7 @@ public class CloudhopperSimulator implements Simulator {
 
         if (failCount > 0 && successCount == 0) {
             state = State.INVALID;
-            log.error("All connections failed to start!");
+            log.error("All smppConnections failed to start!");
         }
     }
 
@@ -283,11 +299,11 @@ public class CloudhopperSimulator implements Simulator {
      * @return SMPPConnectionConf or null if not found
      */
     public SMPPConnectionConf get(int id) {
-        if (connections == null || connections.getConnections() == null) {
+        if (smppConnections == null || smppConnections.getConnections() == null) {
             return null;
         }
 
-        return connections.getConnections().stream()
+        return smppConnections.getConnections().stream()
             .filter(conn -> conn.getId() == id)
             .findFirst()
             .orElse(null);
@@ -296,10 +312,26 @@ public class CloudhopperSimulator implements Simulator {
     /**
      * Gets all connection configurations.
      *
-     * @return List of all connections
+     * @return List of all smppConnections
      */
     public List<SMPPConnectionConf> getAllConnections() {
-        return connections != null ? connections.getConnections() : List.of();
+        return smppConnections != null ? smppConnections.getConnections() : List.of();
+    }
+
+    /**
+     * Gets all smppConnections as a map (Simulator interface requirement).
+     *
+     * @return Map of connection ID to connection configuration
+     */
+    @Override
+    public <T extends com.telemessage.simulators.conf.AbstractConnection> Map<Integer, T> getConnections() {
+        Map<Integer, T> smppConnectionsMap = new java.util.HashMap<>();
+        if (smppConnections != null && smppConnections.getConnections() != null) {
+            for (SMPPConnectionConf conn : smppConnections.getConnections()) {
+                smppConnectionsMap.put(conn.getId(), (T) conn);
+            }
+        }
+        return smppConnectionsMap;
     }
 
     /**
@@ -320,7 +352,7 @@ public class CloudhopperSimulator implements Simulator {
     }
 
     /**
-     * Shuts down all SMPP connections and cleans up resources.
+     * Shuts down all SMPP smppConnections and cleans up resources.
      */
     @PreDestroy
     public void shutdown() {
